--- a/index.html
+++ b/index.html
@@ -17,49 +17,7 @@
       <p>Developed by <a href="https://linkedin.com/in/omar-pacheco/" target="_blank">Omar Pacheco</a></p>
     </div>
   </section>
-  <section id="clock-wrapper" class="container-fluid text-center">
-    <div class="row">
-      <div id="timer" class="col-lg-8 border-right">
-        <p id="time-left" class="display-1 m-0">02:05</p>
-        <p id="timer-label">Session</p>
-        <div class="text-right">
-          <div id="reset" class="float-right">
-            <i class="fas fa-sync-alt fa-lg"></i>
-          </div>
-          <div id="start_stop" class="float-right mr-3">
-            <i class="fas fa-play fa-lg"></i>
-            <i class="fas fa-pause fa-lg"></i>
-          </div>
-        </div>
-      </div>
-      <div id="controls" class="col-lg-4 pr-0">
-        <div id="break">
-          <p class="display-4 m-0">
-            <span id="break-decrement">
-              <i class="fas fa-xs fa-angle-left"></i>
-            </span>
-            <span id="break-length">05</span>
-            <span id="break-increment">
-              <i class="fas fa-xs fa-angle-right"></i>
-            </span>
-          </p>
-          <p id="break-label">Break Length</p>
-        </div>
-        <div id="session">
-          <p class="session-length display-4 m-0">
-            <span id="session-decrement">
-              <i class="fas fa-xs fa-angle-left"></i>
-            </span>
-            <span id="session-length">25</span>
-            <span id="session-increment">
-              <i class="fas fa-xs fa-angle-right"></i>
-            </span>
-          </p>
-          <p id="session-label">Session Length</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  <section id="clock-wrapper" class="container-fluid text-center"></section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
