--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Pomodoro Clock</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
+    <style>
+      @media only screen and (min-width: 992px) {
+        #timer {border-right: 1px solid #dee2e6}
+      }
+    </style>
 </head>
 
 <body>
